--- a/2025/daily-template/Cargo.toml
+++ b/2025/daily-template/Cargo.toml
@@ -1,9 +1,21 @@
 [package]
 name = "{{project-name}}"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 itertools.workspace = true
 nom.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
 miette.workspace = true
+
+[dev-dependencies]
+divan.workspace = true
+rstest.workspace = true
+test-log.workspace = true
+
+[[bench]]
+name = "{{project-name}}-bench"
+path = "benches/benchmarks.rs"
+harness = false
