--- a/2025/day-04/Cargo.toml
+++ b/2025/day-04/Cargo.toml
@@ -9,6 +9,7 @@ nom.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 miette.workspace = true
+glam.workspace = true
 
 [dev-dependencies]
 divan.workspace = true
