day-05(part2): Working solution

--- a/2025/day-05/Cargo.toml
+++ b/2025/day-05/Cargo.toml
@@ -9,6 +9,7 @@ nom.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 miette.workspace = true
+rangemap = "1.7.0"
 
 [dev-dependencies]
 divan.workspace = true
